# packages/types/src/index.ts
@@ -92,6 +92,7 @@ export type ChatMessage = Schemas['ChatMessage'];
 export type ChatMessagePage = Schemas['ChatMessagePage'];
 export type ChatConversation = Schemas['ChatConversation'];
 export type ChatConversationList = Schemas['ChatConversationList'];
+export type ChatContactList = Schemas['ChatContactList'];
 export type OpenConversation = Schemas['OpenConversation'];
 export type PostMessage = Schemas['PostMessage'];
 export type AnalyticsSummary = Schemas['AnalyticsSummary'];
